Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/auth-googlespeech-dev/auth-googlespeech-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-googlespeech
  namespace: auth-googlespeech-dev
  annotations:
    kubernetes.io/ingress.class: registry.pixeon.cloud/authgooglespeech:latest
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - auth-googlespeech.dev.pixeon.cloud
    secretName: auth-googlespeech-dev
  rules:
  - host: auth-googlespeech.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: auth-googlespeech-dev
          servicePort: 80
